data/derived/sp14/progs/unify/prog2735.ml.out
Characters 78-79:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'b -> 'c -> 'a
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'c -> 'a
